compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__invalid_type_alias_parameter_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type GleamOption(okType) = Result(okType, Nil)"
---
----- SOURCE CODE
type GleamOption(okType) = Result(okType, Nil)

----- ERROR
error: Invalid type variable name
  ┌─ /src/one/two.gleam:1:18
  │
1 │ type GleamOption(okType) = Result(okType, Nil)
  │                  ^^^^^^ This is not a valid type variable name

Hint: Type variable names start with a lowercase letter and contain a-z,
0-9, or _.
Try: ok_type
